    automated using electric furnaces from other mods.
    - But using the Blast Furnace is still more efficient if you're not getting free energy.
  Added another crafting recipe for the Light Block that uses Energy Crystals.
    - Because I'm sure I'm not the only one that keeps making 9 Energy Crystals
      only to realize you can't make a Light Block from them.
CHANGED:
  No longer registers a Bronze crafting recipe if Immersive Engineering or Mekanism is installed.
  Changed the Black Hole erase algorithm default speed from 50% of a tick to 20%.
  The Black Hole no longer has a collision box, similar to the Null Block. This means you won't
    be able to break the Black Hole to stop it from erasing the world.
FIXED:
  Fixed Fusion Chamber not dropping when mined.
  Fixed Ores that drop an item not being affected by Pickaxes with the Fortune effect.
  Finally added the Job system. Now the Magic Infuser and Circuit Fabricator
    (machines with more than 1 input slot) will now show their Time Remaining correctly.
  More recipe advancement fixes.



v1.4 - July 26, 2021
INFO:
  Moved all materials to a new ADDSynth Materials mod.
   - This once again breaks your old worlds, and Forge will warn you of the missing items.
   - Hopefully this should be the last time, because I'm not planning on splitting off
      items into a new mod again.
   - This time I tried to use a DataFixer to seamlessly convert your world data to the new
      format, but the DataFixer stuff was much too complicated for me to figure it out
      without documentation, so I have to wait for someone to explain how it works before
      I can use it.
  The Overpowered mod was renamed to Overpowered Technology.
  Starting in version 1.5.x, the mod_id for Overpowered Technology will be renamed
    from overpowered to overpowered_technology.
  Starting in version 1.5.x, ADDSynthCore, ADDSynth Energy, and Overpowered Technology
    will be split apart into 3 separate files.
NEW: